# crossterm-mio-mcve

./: Cargo.toml
src/: main.rs
