[package]
name = "crossterm-mio"
version = "0.1.0"
authors = ["Robert Vojta <rvojta@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.51"
mio = "0.6.19"

[dependencies.crossterm]
git = "https://github.com/crossterm-rs/crossterm.git"
branch = "zrzka/performance"
